# Yolo-upper-computer

./: .envrc  .gitignore  LICENSE  README.md  main.py  pyproject.toml  run.sh
assets/: resources.qrc
configs/: neu_det.yaml
src/: main.py
src/config/: yolo_config.py
src/ui/: home.py  home.ui  home_ui.py  resources_rc.py
src/utils/: udp_thread.py  ui_functions.py  video_thread.py  yolo_thread.py
tools/benchmark/: README.md  bench_ov.py
tools/fpga/: README.md  fpga_udp_video_receiver_linux.py  linux_setup_check.sh  udp_linux_probe.py
tools/model_export/: README.md  export_openvino.py
ui/: home.py
