[project]
name = "yolo-upper-computer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nncf>=3.2.0",
    "opencv-python-headless>=4.13.0.92",
    "openvino>=2026.1.0",
    "pyside6>=6.11.0",
    "ultralytics>=8.4.48",
]

[[tool.uv.index]]
name = "ustc"
url = "https://pypi.mirrors.ustc.edu.cn/simple/"

[tool.ruff]
line-length = 88
target-version = "py313"

extend-exclude = [
    "src/ui/*_ui.py",
    "src/ui/*_rc.py",
]
[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]

ignore = [
    "E501", # 行长度交给 formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = ["src"]
